[package]
name = "telltale-simulator"
version = "16.0.0"
authors = ["Sam Hart"]
edition = "2021"
rust-version = "1.75"
description = "Protocol-machine-backed simulation engine for Telltale choreographic protocols"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
keywords = ["session", "types", "simulation", "choreography"]
categories = ["simulation"]

[lib]
bench = false

[features]
default = ["multi-thread"]
wasm = ["getrandom/js", "telltale-machine/wasm"]
multi-thread = ["telltale-machine/multi-thread"]

[dependencies]
telltale-search = { path = "../search", version = "16.0.0" }
telltale-types = { path = "../types", version = "16.0.0" }
telltale-machine = { path = "../machine", version = "16.0.0" }
telltale-theory = { path = "../theory", version = "16.0.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ciborium = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
blake3 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only dependencies (none yet)

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
telltale-bridge = { path = "../bridge" }
tempfile = { workspace = true }
trybuild = "1.0"

[lints]
workspace = true
