[package]
name = "telltale-theory"
version = "0.9.1"
authors = ["Sam Hart"]
edition = "2021"
rust-version = "1.75"
description = "Session type theory algorithms - projection, merge, subtyping"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
keywords = ["session", "types", "mpst", "projection", "subtyping"]
categories = ["algorithms"]

[lib]
bench = false

[dependencies]
telltale-types = { path = "../types", version = "0.9.1" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
assert_matches = { workspace = true }
telltale-lean-bridge = { path = "../lean-bridge", version = "0.9.1" }

[features]
default = ["projection", "duality", "merge", "well-formedness", "bounded", "async-subtyping", "sync-subtyping", "semantics", "coherence"]

# Core algorithms (included by default)
projection = []
duality = []
merge = []
well-formedness = []
semantics = []         # Async step semantics from ECOOP 2025
coherence = ["semantics", "well-formedness"]  # Coherence predicates (requires semantics and well-formedness)

# Optional advanced algorithms
async-subtyping = []   # POPL 2021 asynchronous subtyping
sync-subtyping = []    # Synchronous subtyping
bounded = []           # Bounded recursion strategies

# All features
full = ["projection", "duality", "merge", "well-formedness", "async-subtyping", "sync-subtyping", "bounded", "semantics", "coherence"]
