[package]
name = "telltale-transport"
version = "0.9.1"
edition = "2021"
authors = ["Telltale Contributors"]
license = "MIT OR Apache-2.0"
description = "Production transport implementations for Telltale session types"
repository = "https://github.com/hxrts/telltale"
keywords = ["session-types", "tcp", "transport", "async", "networking"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"

[dependencies]
telltale-choreography = { version = "0.9.1", path = "../choreography" }
async-trait = "0.1"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "macros", "rt-multi-thread"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Enable TLS support (future)
# tls = ["tokio-rustls", "rustls"]
