[package]
name = "telltale-types"
version = "0.9.1"
authors = ["Sam Hart"]
edition = "2021"
rust-version = "1.75"
description = "Core session types for Telltale - matching Lean definitions"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
keywords = ["session", "types", "mpst", "protocol"]
categories = ["data-structures"]

[lib]
bench = false

[features]
default = []
# Enable DAG-CBOR serialization for IPLD compatibility
dag-cbor = ["dep:serde_ipld_dagcbor"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_ipld_dagcbor = { version = "0.6", optional = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
assert_matches = { workspace = true }
