[package]
name = "telltale-types"
version = "12.0.0"
authors = ["Sam Hart"]
edition = "2021"
rust-version = "1.75"
description = "Core session types for Telltale - matching Lean definitions"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
keywords = ["session", "types", "mpst", "protocol"]
categories = ["data-structures"]

[lib]
bench = false

[features]
default = []
# Enable DAG-CBOR serialization for IPLD compatibility
dag-cbor = ["dep:serde_ipld_dagcbor"]
# Enable explicit SHA-256 helper types and methods as an alternative to the
# default BLAKE3-based content-addressing path.
sha256 = ["dep:sha2"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_ipld_dagcbor = { version = "0.6", optional = true }
thiserror = { workspace = true }
sha2 = { workspace = true, optional = true }
blake3 = { workspace = true }
fixed = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
assert_matches = { workspace = true }
