[package]
name = "telltale-ui"
version = "11.3.0"
authors = ["Sam Hart"]
edition = "2021"
rust-version = "1.75"
description = "Portable Dioxus UI core for the Telltale simulator webapp"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
dioxus = { workspace = true }
dioxus-document = "0.7"
dioxus-shadcn = { git = "https://github.com/hxrts/dioxus-shadcn.git", rev = "ee0ac75d68cf351b3fddc182d74f131c8337c585" }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
telltale-macros = { path = "../macros", version = "11.3.0" }
telltale-machine = { path = "../machine", version = "11.3.0" }
telltale-simulator = { path = "../simulator", version = "11.3.0" }
telltale-viewer = { path = "../viewer", version = "11.3.0" }

[dev-dependencies]
dioxus-ssr = { workspace = true }

[lints]
workspace = true
