[package]
name = "telltale-vm"
version = "0.9.1"
authors = ["Sam Hart"]
edition = "2021"
rust-version = "1.75"
description = "Bytecode VM for choreographic session type protocols"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
keywords = ["session", "types", "vm", "choreography", "runtime"]
categories = ["compilers"]

[lib]
bench = false

[features]
default = []
wasm = ["getrandom/js"]
multi-thread = ["rayon"]

[dependencies]
telltale-types = { path = "../types", version = "0.9.1" }
telltale-theory = { path = "../theory", version = "0.9.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
telltale-theory = { path = "../theory", version = "0.9.1" }
telltale-lean-bridge = { path = "../lean-bridge", version = "0.9.1" }
proptest = { workspace = true }
assert_matches = { workspace = true }

[lints]
workspace = true
