[package]
name = "telltale-vm"
version = "4.0.0"
authors = ["Sam Hart"]
edition = "2021"
autobenches = false
rust-version = "1.75"
description = "Bytecode VM for choreographic session type protocols"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
keywords = ["session", "types", "vm", "choreography", "runtime"]
categories = ["compilers"]

[lib]
bench = false

[features]
default = []
wasm = ["getrandom/js"]
multi-thread = ["rayon"]

[dependencies]
telltale-types = { path = "../types", version = "4.0.0" }
telltale-theory = { path = "../theory", version = "4.0.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
rayon = { version = "1", optional = true }
serde_yaml = { workspace = true }
cfg-if = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }

[dev-dependencies]
telltale-theory = { path = "../theory", version = "4.0.0" }
assert_matches = { workspace = true }
wasm-bindgen-test = "0.3"
criterion = { workspace = true }
telltale-lean-bridge = { path = "../lean-bridge", version = ">=2.1.0, <5.0.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "vm_runtime_bench"
harness = false
