[package]
name = "telltale-web"
version = "11.0.0"
authors = ["Sam Hart"]
edition = "2021"
rust-version = "1.75"
description = "Dioxus web shell for the Telltale simulator tooling"
readme = "../../README.md"
repository = "https://github.com/hxrts/telltale"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
web = ["dioxus/web"]

[dependencies]
dioxus = { workspace = true, features = ["launch"] }
telltale-ui = { path = "../ui", version = "11.0.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Window"] }

[lints]
workspace = true
