[package]
name = "telltale-language-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
telltale-language = { path = ".." }

[[bin]]
name = "parse_choreography"
path = "fuzz_targets/parse_choreography.rs"
test = false
doc = false
bench = false
